# weightederm

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/tdd/: SKILL.md
docs/: choosing_estimator.md  fitted_attributes.md  parameter_reference.md  user_guide.md
notebooks/: reference_like_m123_benchmarks.ipynb
notebooks/results/reference_like_m123/: all_summary_rows.csv  all_trial_rows.csv  all_unknown_summary_rows.csv  all_unknown_trial_rows.csv  m1_summary_rows.csv  m1_trial_rows.csv  m1_unknown_summary_rows.csv  m1_unknown_trial_rows.csv  m2_summary_rows.csv  m2_trial_rows.csv  m2_unknown_summary_rows.csv  m2_unknown_trial_rows.csv  m3_summary_rows.csv  m3_trial_rows.csv  m3_unknown_summary_rows.csv  m3_unknown_trial_rows.csv
src/weightederm/: __init__.py  _benchmark_examples.py  _cv.py  _cv_estimators.py  _fixed_werm.py  _huber.py  _least_squares.py  _logistic.py  _prediction.py  _search.py  _segmented_cv.py  _signal_fitting.py  _smooth_optimization.py  _validation.py  _weights.py
tests/: test_benchmark_examples.py  test_cv.py  test_cv_api.py  test_cv_estimators_module.py  test_cv_scoring.py  test_docs_examples.py  test_estimator_checks.py  test_fixed_werm.py  test_huber.py  test_huber_cv.py  test_least_squares.py  test_least_squares_cv.py  test_logistic.py  test_logistic_cv.py  test_notebooks.py  test_penalty.py  test_prediction_api.py  test_public_api.py  test_readme_examples.py  test_search.py  test_segmented_cv.py  test_signal_fitting.py  test_sklearn_compat.py  test_smoke.py  test_smooth_optimization.py  test_validation.py
(+1 files in other folders)
