[project]
name = "weightederm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "arpino.gabriel@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
weightederm = "weightederm:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
