[project]
name = "weightederm"
version = "0.1.0"
description = "Scikit-learn-style weighted empirical risk minimization for changepoint detection"
readme = "README.md"
authors = [
    { name = "Gabriel Arpino", email = "arpino.gabriel@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2",
    "scipy>=1.10,<1.16",
    "scikit-learn>=1.7",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
